@@ -91,6 +91,7 @@ class FormHelper
 		return $l;
 	}
 
+	// %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 } // end class
 ?>
